Fix protruding scrollbars.

--- a/client/stylesheets/ui/sidebar.less
+++ b/client/stylesheets/ui/sidebar.less
@@ -47,7 +47,7 @@
         top: @toolbar_height + 31px;
         bottom: 30px;
         left: 0;
-        overflow-y: scroll;
+        overflow-y: auto;
         overflow-x: hidden;
         
         li {
